// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@gondel/plugin-data @data should automatically convert property key to data value 1`] = `
Button {
  "_componentName": "Button",
  "_ctx": <div
    data-config="{\\"hello\\":\\"World!\\",\\"id\\":123}"
    data-environment="TEST"
    data-g-name="Button"
    data-language="es"
    data-text="784e5b776ce40e9f42b4f1c8"
  />,
  "_namespace": "g",
  "dataEnvironment": "TEST",
  "dataLanguage": "es",
  "stop": [Function],
}
`;

exports[`@gondel/plugin-data Serializers Custom - should work with custom serializers (encrypted example) 1`] = `
Button {
  "_componentName": "Button",
  "_ctx": <div
    data-config="{\\"hello\\":\\"World!\\",\\"id\\":123}"
    data-environment="TEST"
    data-g-name="Button"
    data-text="784e5b776ce40e9f42b4f1c8"
  />,
  "_namespace": "g",
  "stop": [Function],
  "text": "Hello World!",
}
`;

exports[`@gondel/plugin-data Serializers Custom - should work with custom serializers (encrypted example) 2`] = `
Button {
  "_componentName": "Button",
  "_ctx": <div
    data-config="{\\"hello\\":\\"World!\\",\\"id\\":123}"
    data-environment="TEST"
    data-g-name="Button"
    data-text="784e5b776ce43f825fb5b59d1e96b561d1dc0aaaa355bdef4844"
  />,
  "_namespace": "g",
  "stop": [Function],
  "text": "Hello from the other Side!",
}
`;

exports[`@gondel/plugin-data Serializers JSON - should work with JSONs 1`] = `
Button {
  "_componentName": "Button",
  "_ctx": <div
    data-config="{\\"hello\\":\\"World!\\",\\"id\\":123}"
    data-environment="TEST"
    data-g-name="Button"
    data-text="784e5b776ce40e9f42b4f1c8"
  />,
  "_namespace": "g",
  "config": Object {
    "hello": "World!",
    "id": 123,
  },
  "stop": [Function],
}
`;

exports[`@gondel/plugin-data Serializers JSON - should work with JSONs 2`] = `
Button {
  "_componentName": "Button",
  "_ctx": <div
    data-config="{\\"hello\\":\\"World!\\",\\"id\\":999}"
    data-environment="TEST"
    data-g-name="Button"
    data-text="784e5b776ce40e9f42b4f1c8"
  />,
  "_namespace": "g",
  "config": Object {
    "hello": "World!",
    "id": 999,
  },
  "stop": [Function],
}
`;

exports[`@gondel/plugin-data should allow/auto-convert private-like-values with underscore prefix 1`] = `
Button {
  "_componentName": "Button",
  "_ctx": <div
    data-config="{\\"hello\\":\\"World!\\",\\"id\\":123}"
    data-environment="TEST"
    data-g-name="Button"
    data-text="784e5b776ce40e9f42b4f1c8"
  />,
  "_dataEnvironment": "TEST",
  "_namespace": "g",
  "stop": [Function],
}
`;

exports[`@gondel/plugin-data should read values from the data attribute correctly 1`] = `
Button {
  "_componentName": "Button",
  "_ctx": <div
    data-config="{\\"hello\\":\\"World!\\",\\"id\\":123}"
    data-environment="TEST"
    data-g-name="Button"
    data-text="784e5b776ce40e9f42b4f1c8"
  />,
  "_namespace": "g",
  "env": "TEST",
  "stop": [Function],
}
`;

exports[`@gondel/plugin-data should set values inside the data attribute correctly 1`] = `
Button {
  "_componentName": "Button",
  "_ctx": <div
    data-config="{\\"hello\\":\\"World!\\",\\"id\\":123}"
    data-environment="TEST"
    data-g-name="Button"
    data-text="784e5b776ce40e9f42b4f1c8"
  />,
  "_namespace": "g",
  "env": "TEST",
  "stop": [Function],
}
`;

exports[`@gondel/plugin-data should set values inside the data attribute correctly 2`] = `
Button {
  "_componentName": "Button",
  "_ctx": <div
    data-config="{\\"hello\\":\\"World!\\",\\"id\\":123}"
    data-environment="PROD"
    data-g-name="Button"
    data-text="784e5b776ce40e9f42b4f1c8"
  />,
  "_namespace": "g",
  "env": "PROD",
  "stop": [Function],
}
`;

exports[`@gondel/plugin-data should use default values from the class if no attr provided 1`] = `
Button {
  "_componentName": "Button",
  "_ctx": <div
    data-config="{\\"hello\\":\\"World!\\",\\"id\\":123}"
    data-environment="TEST"
    data-g-name="Button"
    data-some-invalid-element="initial-value"
    data-text="784e5b776ce40e9f42b4f1c8"
  />,
  "_namespace": "g",
  "dataSomeInvalidElement": "initial-value",
  "stop": [Function],
}
`;
